@@ -860,6 +860,20 @@ org.dspace.app.itemexport.max.size = 200
 # except where explicitly stated otherwise.                     #
 #---------------------------------------------------------------#
 
+##### Hide Item Metadata Fields  #####
+# Fields named here are hidden in the following places UNLESS the
+# logged-in user is an Administrator:
+#  1. XMLUI metadata XML view, and Item splash pages (long and short views).
+#  2. JSPUI Item splash pages
+#  3. OAI-PMH server, "oai_dc" format.
+#     (NOTE: Other formats are _not_ affected.)
+# To designate a field as hidden, add a property here in the form:
+#    metadata.hide.SCHEMA.ELEMENT.QUALIFIER = true
+#
+# This default configuration hides the dc.description.provenance field,
+# since that usually contains email addresses which ought to be kept
+# private and is mainly of interest to administrators:
+metadata.hide.dc.description.provenance = true
 
 ##### Settings for Submission Process #####
 
